adiciona título ao script

--- a/code/main.Rmd
+++ b/code/main.Rmd
@@ -1,5 +1,6 @@
 ---
-output: html_document
+title: "Descarregamento dos dados para construção das páginas do portal do febr"
+author: "Alessandro Samuel-Rosa"
 ---
 
 ```{r}
