--- a/code/snapshot.Rmd
+++ b/code/snapshot.Rmd
@@ -242,8 +242,9 @@ tmp <-
 idx <- match(br$SigUF, names(tmp))
 dens <- tmp[idx] / br$area
 dens <- dens[order(dens)]
-png("../res/fig/febr-observacao-espaco.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
-# png("../res/fig/febr-observacao-espaco-goias.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-espaco.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-espaco-saopaulo.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
+png("../res/fig/febr-observacao-espaco-goias.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
 plot(
   br[1], graticule = TRUE, axes = TRUE, 
   sub = Sys.Date(), 
@@ -255,11 +256,15 @@ observacao %>%
   dplyr::filter(!is.na(coord_x) | !is.na(coord_y)) %>% 
   sf::st_as_sf(coords = c('coord_x', 'coord_y'), crs = 4326) %>%
   dplyr::select(estado_id) %>% 
+  plot(
+  cex = ifelse(.$estado_id == "GO", 0.5, 0.3),
+  pch = ifelse(.$estado_id == "GO", 20, 1),
+  col = ifelse(.$estado_id == "GO", "firebrick1", "lightgray"), add = TRUE)
   # plot(
-    # cex = ifelse(.$estado_id == "GO", 0.5, 0.3),
-    # pch = ifelse(.$estado_id == "GO", 20, 1),
-    # col = ifelse(.$estado_id == "GO", "firebrick1", "lightgray"), add = TRUE)
-  plot(cex = 0.5, col = "firebrick1", add = TRUE)
+  # cex = ifelse(.$estado_id == "SP", 0.5, 0.3),
+  # pch = ifelse(.$estado_id == "SP", 20, 1),
+  # col = ifelse(.$estado_id == "SP", "firebrick1", "lightgray"), add = TRUE)
+  # plot(cex = 0.5, col = "firebrick1", add = TRUE)
 dev.off()
 ```
 
@@ -285,31 +290,36 @@ de observação, refletindo o histórico de ocupação do território brasileiro
 e pesquisa via universidades e centros de pesquisa agronômica.
 
 ```{r}
-png("../res/fig/febr-observacao-uf.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
-# png("../res/fig/febr-observacao-uf-saopaulo.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-uf.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-uf-saopaulo.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
+png("../res/fig/febr-observacao-uf-goias.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
 layout(matrix(1:2, nrow = 1), widths = c(2, 2), heights = 1, respect = FALSE)
 par(oma = c(0, 0, 1, 0), las = 1, mar = c(4, 4, 1, 1))
 tmp %>% 
   sort() %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
+    # col = "firebrick1", border = "firebrick1",
     # col = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
     # border = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
-    # ylab = "Unidade da federação", xlab = "Número",
-    ylab = "Federative unit", xlab = "Number",
+    col = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
+    border = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
+    ylab = "Unidade da federação", xlab = "Número",
+    # ylab = "Federative unit", xlab = "Number",
     horiz = TRUE, ann = TRUE)
 grid()
 dens %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
+    # col = "firebrick1", border = "firebrick1",
     # col = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
     # border = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
-    # ylab = "Unidade da federação", xlab = "Densidade (por 1000 km²)",
-    ylab = "Federative unit", xlab = "Density (per 1000 km²)",
+    col = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
+    border = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
+        ylab = "Unidade da federação", xlab = "Densidade (por 1000 km²)",
+    # ylab = "Federative unit", xlab = "Density (per 1000 km²)",
     horiz = TRUE, ann = TRUE)
 title(
   # main = "Distribuição das observações pelas unidades da federação",
-  main = "Observations by federative unit",
+  # main = "Observations by federative unit",
   sub = Sys.Date(), outer = TRUE)
 grid()
 dev.off()
@@ -321,8 +331,9 @@ dessas observações -- ctb0657, ctb0831 e ctb0775 --, cada um com mais de 100 o
 espaciais. Outros 14 conjuntos de dados possuem entre 50 e 100 observações sem coordenadas espaciais.
 
 ```{r}
-png("../res/fig/febr-observacao-sem-coordenadas.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
-# png("../res/fig/febr-observacao-sem-coordenadas-goias.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-sem-coordenadas.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-sem-coordenadas-goias.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
+png("../res/fig/febr-observacao-sem-coordenadas-saopaulo.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
 layout(matrix(1:2, nrow = 1), widths = c(2, 2), heights = 1, respect = FALSE)
 par(oma = c(0, 0, 1, 0), las = 1, mar = c(4, 4, 1, 1))
 observacao %>% 
@@ -332,11 +343,13 @@ observacao %>%
   table() %>% 
   sort() %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
+    # col = "firebrick1", border = "firebrick1",
     # col = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
     # border = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
-    # ylab = "Unidade da federação", xlab = "Número de observações",
-    ylab = "Federative unit", xlab = "Number",
+    col = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
+    border = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
+    ylab = "Unidade da federação", xlab = "Número de observações",
+    # ylab = "Federative unit", xlab = "Number",
     horiz = TRUE)
 grid()
 observacao %>% 
@@ -348,17 +361,19 @@ observacao %>%
   head(27L) %>% 
   sort() %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
+    # col = "firebrick1", border = "firebrick1",
     # col = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
     # border = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
+    col = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
+    border = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
     names.arg = gsub("ctb0", "", names(.)),
-    # ylab = "Conjunto de dados", xlab = "Número de observações",
-    ylab = "Dataset ID", xlab = "Number",
+    ylab = "Conjunto de dados", xlab = "Número de observações",
+    # ylab = "Dataset ID", xlab = "Number",
     horiz = TRUE)
 grid()
 title(
   # main = "Distribuição das observações sem coordenadas espaciais",
-  main = "Observations without spatial coordinates",
+  # main = "Observations without spatial coordinates",
   sub = Sys.Date(), outer = TRUE)
 dev.off()
 ```
@@ -401,8 +416,9 @@ observacao[!is.na(observacao$coord_x), c("coord_x", "coord_y", "observacao_data"
 ```
 
 ```{r}
-png("../res/fig/febr-observacao-tempo.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
-# png("../res/fig/febr-observacao-tempo-goias.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-tempo.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+png("../res/fig/febr-observacao-tempo-saopaulo.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
+# png("../res/fig/febr-observacao-tempo-goias.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
 par(oma = c(0, 0, 0, 0), las = 1, mar = c(4, 4, 2, 1))
 tmp <- 
   observacao %>% 
@@ -416,26 +432,27 @@ barplot(tmp, col = "firebrick1", border = "firebrick1")
 grid()
 tmp %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
-    # col = "lightgray", border = "lightgray",
+    # col = "firebrick1", border = "firebrick1",
+    col = "lightgray", border = "lightgray",
     # sub = glue::glue("Versão {Sys.Date()}"),
-    # xlab = "Ano", ylab = "Número de observações",
-    xlab = "Year", ylab = "Number",
+    xlab = "Ano", ylab = "Número de observações",
+    # xlab = "Year", ylab = "Number",
     # main = "Distribuição temporal das observações",
-    main = "Temporal distribution of observations",
+    # main = "Temporal distribution of observations",
     add = TRUE, ann = TRUE)
-# tmp2 <-
-# observacao %>% 
-#   filter(estado_id == "GO") %>% 
-#   select(observacao_data) %>% 
-#   mutate(
-#     observacao_data = as.Date(observacao_data),
-#     observacao_data = format(observacao_data, "%Y")) %>% 
-#   table()
-# id <- which(names(tmp) %in% names(tmp2))
-# tmp[id] <- tmp2
-# tmp[-id] <- NA
-# barplot(tmp, col = "firebrick1", border = "firebrick1", add = TRUE, xaxt = "n", yaxt = "n")
+tmp2 <-
+observacao %>%
+  # filter(estado_id == "GO") %>%
+  filter(estado_id == "SP") %>%
+  select(observacao_data) %>%
+  mutate(
+    observacao_data = as.Date(observacao_data),
+    observacao_data = format(observacao_data, "%Y")) %>%
+  table()
+id <- which(names(tmp) %in% names(tmp2))
+tmp[id] <- tmp2
+tmp[-id] <- NA
+barplot(tmp, col = "firebrick1", border = "firebrick1", add = TRUE, xaxt = "n", yaxt = "n")
 dev.off()
 ```
 
@@ -447,6 +464,7 @@ ctb0657, na Bahia, e ctb831, no Paraná.
 ```{r}
 png("../res/fig/febr-observacao-sem-data.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
 # png("../res/fig/febr-observacao-sem-data-goias.png", width = 480 * 2, height = 480 * 2, res = 72 * 2)
+png("../res/fig/febr-observacao-sem-data-saopaulo.png", width = 480 * 3, height = 480 * 2, res = 72 * 2)
 layout(matrix(1:2, nrow = 1), widths = c(2, 2), heights = 1, respect = FALSE)
 par(oma = c(0, 0, 1, 0), las = 1, mar = c(4, 4, 1, 1))
 observacao %>% 
@@ -456,11 +474,13 @@ observacao %>%
   table() %>% 
   sort() %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
+    # col = "firebrick1", border = "firebrick1",
     # col = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
     # border = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
-    # ylab = "Unidade da federação", xlab = "Número de observações",
-    ylab = "Federative unit", xlab = "Number",
+    col = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
+    border = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
+    ylab = "Unidade da federação", xlab = "Número de observações",
+    # ylab = "Federative unit", xlab = "Number",
     horiz = TRUE)
 grid()
 observacao %>% 
@@ -472,17 +492,19 @@ observacao %>%
   head(27L) %>% 
   sort() %>% 
   barplot(
-    col = "firebrick1", border = "firebrick1",
+    # col = "firebrick1", border = "firebrick1",
     # col = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
     # border = ifelse(names(.) == "GO", "firebrick1", "lightgray"),
+    col = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
+    border = ifelse(names(.) == "SP", "firebrick1", "lightgray"),
     names.arg = gsub("ctb0", "", names(.)),
-    # ylab = "Conjunto de dados", xlab = "Número de observações",
-    ylab = "Dataset ID", xlab = "Number",
+    ylab = "Conjunto de dados", xlab = "Número de observações",
+    # ylab = "Dataset ID", xlab = "Number",
     horiz = TRUE)
 grid()
 title(
   # main = "Distribuição das observações com data desconhecida",
-  main = "Observations without temporal coordinate",
+  # main = "Observations without temporal coordinate",
   sub = Sys.Date(), outer = TRUE)
 dev.off()
 ```
